--- a/donofy/templates/allauth/account/email.html
+++ b/donofy/templates/allauth/account/email.html
@@ -5,59 +5,65 @@
 {% block head_title %}{% trans "Email Addresses" %}{% endblock %}
 
 {% block inner_content %}
-    <h1 class="text-pink bold">{% trans "Email Addresses" %}</h1>
-{% if emailaddresses %}
-<p>{% trans 'The following email addresses are associated with your account:' %}</p>
 
-<form action="{% url 'account_email' %}" class="email_list" method="post">
-{% csrf_token %}
-{{ form|crispy }}
-<fieldset class="blockLabels">
-
-  {% for emailaddress in emailaddresses %}
-<div class="ctrlHolder">
-      <label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}">
-
-      <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary or emailaddresses|length == 1 %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
-
-{{ emailaddress.email }}
-    {% if emailaddress.verified %}
-    <span class="verified">{% trans "Verified" %}</span>
-    {% else %}
-    <span class="unverified">{% trans "Unverified" %}</span>
-    {% endif %}
-      {% if emailaddress.primary %}<span class="primary">{% trans "Primary" %}</span>{% endif %}
-</label>
-</div>
-  {% endfor %}
-
-<div class="buttonHolder">
-      <button class="secondaryAction btn btn-lg btn-pink my-4" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
-      <button class="secondaryAction btn btn-lg btn-pink my-4" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
-      <button class="primaryAction btn btn-lg btn-pink my-4" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
-</div>
-
-</fieldset>
-</form>
-
-{% else %}
-{% include "account/snippets/warn_no_email.html" %}
-{% endif %}
-
-  {% if can_add_email %}
-    <h2>{% trans "Add Email Address" %}</h2>
-
-    <form method="post" action="{% url 'account_email' %}" class="add_email">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button name="action_add" type="submit">{% trans "Add Email" %}</button>
-    </form>
-  {% endif %}
+  <div class="container-fluid bg-light-brand account-box p-3 p-md-5 my-3 my-md-5 mx-auto">
+    <div class="row">
+      <div class="col-12">
+        <h1 class="text-pink bold">{% trans "Email Addresses" %}</h1>
+        {% if emailaddresses %}
+        <p>{% trans 'The following email addresses are associated with your account:' %}</p>
+      </div>
+    </div>
+    <form action="{% url 'account_email' %}" class="email_list" method="post">
+      {% csrf_token %}
+      {{ form|crispy }}
+      <fieldset class="blockLabels">
+      
+        {% for emailaddress in emailaddresses %}
+      <div class="ctrlHolder">
+            <label for="email_radio_{{forloop.counter}}" class="{% if emailaddress.primary %}primary_email{%endif%}">
+      
+            <input id="email_radio_{{forloop.counter}}" type="radio" name="email" {% if emailaddress.primary or emailaddresses|length == 1 %}checked="checked"{%endif %} value="{{emailaddress.email}}"/>
+      
+      {{ emailaddress.email }}
+          {% if emailaddress.verified %}
+          <span class="verified">{% trans "Verified" %}</span>
+          {% else %}
+          <span class="unverified">{% trans "Unverified" %}</span>
+          {% endif %}
+            {% if emailaddress.primary %}<span class="primary">{% trans "Primary" %}</span>{% endif %}
+      </label>
+      </div>
+        {% endfor %}
+      
+      <div class="buttonHolder mb-2">
+            <button class="secondaryAction btn btn-lg btn-pink btn-custom-size mb-2" type="submit" name="action_primary" >{% trans 'Make Primary' %}</button>
+            <button class="secondaryAction btn btn-lg btn-white btn-custom-size mb-2" type="submit" name="action_send" >{% trans 'Re-send Verification' %}</button>
+            <button class="primaryAction btn btn-lg btn-white btn-custom-size mb-2" type="submit" name="action_remove" >{% trans 'Remove' %}</button>
+      </div>
+      
+      </fieldset>
+      </form>
+      
+      {% else %}
+      {% include "account/snippets/warn_no_email.html" %}
+      {% endif %}
+      
+        {% if can_add_email %}
+          <h2>{% trans "Add Email Address" %}</h2>
+      
+          <form method="post" action="{% url 'account_email' %}" class="add_email">
+              {% csrf_token %}
+              {{ form.as_p }}
+              <button class="btn btn-lg btn-pink btn-custom-size my-4" name="action_add" type="submit">{% trans "Add Email" %}</button>
+          </form>
+        {% endif %}
+  </div>
 
 {% endblock %}
 
 
-{% block extra_body %}
+{% block postloadjs %}
 <script type="text/javascript">
 (function() {
   var message = "{% trans 'Do you really want to remove the selected email address?' %}";
