--- a/donofy/home/static/home/css/home.css
+++ b/donofy/home/static/home/css/home.css
@@ -76,7 +76,7 @@ p.power-text {
 /* Bootstrap xs screens */
 @media screen and (min-width: 320px) and (max-width: 575px) {
     h2,
-    h3, {
+    h3 {
         font-size: 1.5rem;
     }
     .power-together h2 {
@@ -101,7 +101,7 @@ p.power-text {
 /* Bootstrap sm screens */
 @media screen and (min-width: 576px) and (max-width: 767px) {
     h2,
-    h3, {
+    h3 {
         font-size: 1.5rem;
     }
     .power-together h2 {
@@ -126,7 +126,7 @@ p.power-text {
 /* Bootstrap md screens */
 @media screen and (min-width: 768px) and (max-width: 991px) {
     h2,
-    h3, {
+    h3 {
         font-size: 1.5rem;
     }
     .power-together h2 {
