--- a/donofy/static/css/base.css
+++ b/donofy/static/css/base.css
@@ -75,6 +75,7 @@ a.a-pink:focus {
 .card-white {
     background-color: #f6f6f6;
     color: #222;
+    border-radius: 1.5rem;
 }
 
 .card-white:hover,
@@ -117,7 +118,11 @@ a.a-pink:focus {
 /* ICONS */
 
 i.icon-lg {
-    font-size: 3rem;
+    font-size: 2rem;
+    padding: 0;
+    width: 3rem;
+    height: 3rem;
+    line-height: 50px;
 }
 
 .icon-white {
@@ -171,6 +176,78 @@ i.icon-lg {
 
 .header-container {
     padding-top: 64px;
+}
+
+/* BOOTSTRAP TOASTS */
+
+.message-container {
+    position: fixed;
+    top: 64px;
+    right: 15px;
+    min-width: 280px;
+    z-index: 99999999999;
+}
+
+.toast-header {
+    font-size: 1.2rem;
+}
+
+.toast-body {
+    font-size: 1rem;
+}
+
+.custom-toast {
+    overflow: visible;
+}
+
+.toast-capper {
+    height: 10px;
+}
+
+
+/* FROM CSS-TRICKS.COM: https://css-tricks.com/snippets/css/css-triangle/ */
+.arrow-up {
+    width: 0; 
+    height: 0; 
+    border-left: 4px solid transparent;
+    border-right: 4px solid transparent; 
+    border-bottom: 10px solid black;
+    position: absolute;
+    top: -10px;
+    right: 36px;
+}
+
+/* Convenience classes - colors copied from Bootstrap */
+.arrow-primary {
+    border-bottom-color: #007bff !important;
+}
+
+.arrow-secondary {
+    border-bottom-color: #6c757d !important;
+}
+
+.arrow-success {
+    border-bottom-color: #28a745 !important;
+}
+
+.arrow-danger {
+    border-bottom-color: #dc3545 !important;
+}
+
+.arrow-warning {
+    border-bottom-color: #ffc107 !important;
+}
+
+.arrow-info {
+    border-bottom-color: #17a2b8 !important;
+}
+
+.arrow-light {
+    border-bottom-color: #f8f9fa !important;
+}
+
+.arrow-dark {
+    border-bottom-color: #343a40 !important;
 }
 
 /* FOOTER */
