--- a/donofy/templates/base.html
+++ b/donofy/templates/base.html
@@ -55,7 +55,7 @@
             </li>
             <li class="nav-item dropdown text-pink bold">
               <a class="nav-link text-pink bold" href="#" id="user-options"role="button" data-toggle="dropdown" aria-expanded="false">
-                My Account <i class="fa fa-chevron-down text-pink icon-link bold" aria-hidden="true"></i>
+                My Account <span><i class="fa fa-chevron-down text-pink icon-link bold" aria-hidden="true"></i></span>
               </a>
               <div class="dropdown-menu dropdown-menu-right text-pink bold" aria-labelledby="user-options">
                 {% if request.user.is_authenticated %}
@@ -76,7 +76,21 @@
     </header>
 
     {% if messages %}
-        <div class="message-container"></div>
+      <div class="message-container">
+        {% for message in messages %}
+          {% with message.level as level %}
+            {% if level == 40 %}
+              {% include 'includes/toasts/toast_error.html' %}
+            {% elif level == 30 %}
+              {% include 'includes/toasts/toast_warning.html' %}
+            {% elif level == 25 %}
+              {% include 'includes/toasts/toast_success.html' %}
+            {% else %}
+              {% include 'includes/toasts/toast_info.html' %}
+            {% endif %}
+          {% endwith %}
+        {% endfor %}
+      </div>
     {% endif %}
 
     {% block page_header %}
@@ -100,6 +114,9 @@
     </footer>
 
     {% block postloadjs %}
+    <script type="text/javascript">
+      $('.toast').toast('show');
+    </script>
     {% endblock %}
 
   </body>
