--- a/donofy/charities/templates/charities/includes/search-filters.html
+++ b/donofy/charities/templates/charities/includes/search-filters.html
@@ -1,3 +1,3 @@
-<div class="container-fluid search-bar">
-    <h3 class="bg-pink text-white text-center search-text">Search bar placeholder</h3>
+<div class="container-fluid search-bar p-0 m-0">
+    <h2 class="bg-pink-light text-white text-center search-text m-0">Search bar placeholder</h2>
 </div>
