--- a/donofy/templates/base.html
+++ b/donofy/templates/base.html
@@ -152,6 +152,7 @@
     {% block postloadjs %}
     <script type="text/javascript">
       $('.toast').toast('show');
+	  $enable-shadows;
     </script>
     {% endblock %}
 
