--- a/donofy/charities/templates/charities/includes/search-filters.html
+++ b/donofy/charities/templates/charities/includes/search-filters.html
@@ -4,7 +4,7 @@
         <div class="input-group form-inline col-12 col-lg-8 mx-auto justify-content-center">
             <input id="searchbar" class="form-control-lg" type="text" name="q" placeholder="Search our charities">
             <div class="input-group-append">
-                <button class="form-control btn btn-lg btn-white-search" type="submit">
+                <button class="form-control btn btn-lg btn-white-search bg-light-brand" type="submit">
                     <span class="icon">
                         <i class="fas fa-search"></i>
                     </span>
