fix: changed hero images. Stronger brand impact

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,8 +8,8 @@
 {% block content %}
 <div class="container-fluid p-0 m-0">
     <div class="row p-0 m-0">
-        <img id="hero-img" class="col-12 d-none d-lg-block" src="{% static '/media/hero-img.jpg' %}" center no-repeat>
-        <img id="hero-img-sm" class="col-12 d-block d-lg-none" src="{% static '/media/hero-img-small.jpg' %}" center no-repeat>
+        <img id="hero-img" class="col-12 d-none d-lg-block" src="{% static '/media/hero-img.png' %}" center no-repeat>
+        <img id="hero-img-sm" class="col-12 d-block d-lg-none" src="{% static '/media/hero-img-small.png' %}" center no-repeat>
         <!-- Displays on screens with min-width >= 992px -->
         <div id="hero-text" class="col-12 d-none d-lg-block pl-5">
             <h1 class="d-none d-lg-block text-white bold pb-5">Spreading affordable support,<br>to your causes, your way.</h1>
