--- a/charities/templates/charities/charities.html
+++ b/charities/templates/charities/charities.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" href="{% static 'charities/css/charities.css' %}">
 {% endblock %}
 
+{% block extra_title %}Charities{% endblock %}
+
 {% block content %}
     <div class="container bg-light-brand">
         <!-- headings -->
