--- a/charities/templates/charities/includes/search-filters.html
+++ b/charities/templates/charities/includes/search-filters.html
@@ -1,22 +1,11 @@
-<form method="GET" action="{% url 'charities' %}" class="row m-0 p-0">
-    <!-- searchbar on screens >= 576px -->
-    <div class="input-group flex-nowrap d-none d-sm-flex col-12 col-md-10 mx-auto">
-        <input class="form-control-lg-custom shadow"
-            type="text" name="q" placeholder="Search our charities" aria-label="Search our charities">
-        <div class="input-group-append d-none d-sm-flex">
-            <button class="input-group-text btn btn-lg btn-pink-search shadow" type="submit">
-                <span class="icon bold"><i class="fas fa-search"></i> Search</span>
+<form method="GET" action="{% url 'charities' %}">
+    <div class="input-group-lg shadow-sm d-flex flex-nowrap my-3">
+        <input type="text" class="form-control search-control" name="q"
+            placeholder="Search our charities" aria-label="Search our charities" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+            <button class="input-group-text bold btn btn-lg btn-pink" type="submit">
+                <i class="fas fa-search"></i>
             </button>
         </div>
-    </div>
-</form>
-<form method="GET" action="{% url 'charities' %}" class="row m-0 p-0">
-    <!-- searchbar on screens < 576px -->
-    <div class="col-12 d-sm-none px-0 mx-0">
-        <input class="searchbar-xs form-control-lg form-control-lg-custom2 my-2 shadow"
-            type="text" name="q" placeholder="Search our charities" aria-label="Search our charities"></div>
-        <button class="btn btn btn-lg btn-pink col-12 d-sm-none shadow" type="submit">
-            <span class="icon bold"><i class="fas fa-search"></i> Search</span>
-        </button>
     </div>
 </form>
