--- a/templates/base.html
+++ b/templates/base.html
@@ -54,10 +54,10 @@
               <a class="nav-link drop-item-h text-pink bold" href="#">FAQs</a>
             </li>
             <li class="nav-item dropdown text-pink bold">
-              <a class="nav-link drop-item-h text-pink bold" href="#" id="user-options"role="button" data-toggle="dropdown" aria-expanded="false">
-                My Account <span><i class="fa fa-chevron-down text-pink icon-link bold" aria-hidden="true"></i></span>
+              <a class="nav-link drop-item-h text-pink bold dropdown-toggle" href="#" id="user-options"role="button" data-toggle="dropdown" aria-expanded="false">
+                My Account
               </a>
-              <div class="dropdown-menu dropdown-menu-right text-pink bold" aria-labelledby="user-options">
+              <div class="dropdown-menu dropdown-menu-right shadow border-pink bold" aria-labelledby="user-options">
                 {% if request.user.is_authenticated %}
                   {% if request.user.is_superuser %}
                     <a href="#" class="dropdown-item drop-item-h text-pink bold">Product Management</a>
