--- a/static/css/base.css
+++ b/static/css/base.css
@@ -10,7 +10,7 @@ html {
 
 body {
     padding: 0;
-    margin-top: 60px;
+    margin-top: 90px;
     height: calc(100vh - 60px);
     color: #222;
     background-color: #f6f6f6;
@@ -82,10 +82,7 @@ a.a-pink:focus {
 
 .nav-link:hover,
 .nav-link:active,
-.nav-link:focus,
-.icon-link:hover,
-.icon-link:active,
-.icon-link:focus {
+.nav-link:focus {
     color: #582E8E;
 }
 
